# ifm3d

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog.md  Dockerfile  Dockerfile.deb  LICENSE-thirdparty  O3R-ChangeLog.md  README.md  VERSION  check-code.py  clang_format.py  clean_emacs.sh  docker-compose.yml  requirements.txt  setup.py
doc/doxygen/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  doxygen-awesome-sidebar-only.css
examples/: .clang-format  CMakeLists.txt  examples_list.md  index.md
examples/cpp/: CMakeLists.txt  examples.md
examples/cpp/configuration/: configuration.md  configuration_ex.cpp
examples/cpp/gettingData/: getting_data.md  getting_data_ex.cpp
examples/cpp/multiHead/: multi_head_ex.md
examples/logging/: logging.md
examples/o3r/: CMakeLists.txt  index.md  saveCMakeLists.txt
examples/o3r/2d_data/: 2d_data.cpp  2d_data.md  2d_data.py
examples/o3r/configuration/: configuration.cpp  configuration.md  configuration.py
examples/o3r/data_conversion/: data_conversion.cpp
examples/o3r/deserialize/: deserialize.cpp  deserialize.md  deserialize.py
examples/o3r/getting_data/: getting_data.cpp  getting_data.md  getting_data.py  getting_data_callback.cpp  getting_data_callback.py
examples/o3r/ifm3d_playground/: CMakeLists.txt  README.md  ifm3d_playground.cpp
examples/o3r/multi_head/: multi_head.cpp  multi_head.md
examples/o3r/read_h5/: 2022-07-27_160359.h5.REMOVED.git-id  one_frame.h5  read_h5.cpp
examples/o3r/save_frame_txt/: save_frame_txt.cpp
examples/o3r/save_h5/: save_h5.cpp  save_h5.py
examples/o3r/time_sync/: time_sync.cpp
examples/o3r/tutorials/: CMakeLists.txt  basic_usage_ex.cpp
examples/o3r/viewer/: README.md  ifm3dpy_viewer.py  requirements.txt
examples/oem/ifm3d-on-VPU/: README.md  docker-compose.yml
examples/python/: examples.md
examples/python/configuration/: configuration.md  configuration.py
examples/python/gettingData/: gettingData.md
examples/python/the_great_example/: the_great_example.md
examples/python/viewer/: README.md  ifm3dpy_viewer.py
examples/tutorials/: CMakeLists.txt  configuration.md  configuration_ex.cpp
examples/tutorials/configuration/: conf_set.json  configuration_ex.cpp
examples/tutorials/gettingData/: getting_data.md  getting_data_ex.cpp
modules/: CMakeLists.txt
modules/camera/: CMakeLists.txt
modules/camera/src/: CMakeLists.txt
modules/camera/test/: CMakeLists.txt  ifm3d-camera-camera-tests.cpp  ifm3d-camera-err-tests.cpp  ifm3d-camera-testrunner.cpp  ifm3d-camera-version-tests.cpp  test_wrapper.bat.in
modules/common/: CMakeLists.txt
modules/common/src/: CMakeLists.txt  err.cpp  util.cpp
modules/common/test/: CMakeLists.txt  ifm3d-common-err-tests.cpp  ifm3d-common-logging-tests.cpp  ifm3d-common-testrunner.cpp  test_wrapper.bat.in
modules/crypto/: CMakeLists.txt
modules/crypto/src/: CMakeLists.txt
modules/crypto/test/: CMakeLists.txt  ifm3d-crypto-testrunner.cpp  ifm3d-crypto-tests.cpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/deserialize/: CMakeLists.txt
modules/deserialize/test/: CMakeLists.txt  ifm3d-deserialize-testrunner.cpp  ifm3d-deserialize-tests.cpp  test_utils.hpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/device/: CMakeLists.txt
modules/device/src/: CMakeLists.txt  device.cpp  discovery.cpp  discovery.hpp  legacy_device.cpp  legacy_device_impl.hpp  o3c.cpp  o3d.cpp  o3r.cpp  o3r_impl.hpp  o3x.cpp  semver.cpp  util.cpp  version.cpp  xmlrpc.cpp  xmlrpc.hpp
modules/device/test/: CMakeLists.txt  ifm3d-camera-version-tests.cpp  ifm3d-device-device-base-tests.cpp  ifm3d-device-err-tests.cpp  ifm3d-device-legacy-tests.cpp  ifm3d-device-o3c-tests.cpp  ifm3d-device-o3d-tests.cpp  ifm3d-device-o3r-tests.cpp  ifm3d-device-o3x-tests.cpp  ifm3d-device-testrunner.cpp  ifm3d-device-version-tests.cpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/examples/: CMakeLists.txt  README.md  ex-cartesian_compare.cpp  ex-exposure_times.cpp  ex-fast_app_switch.cpp  ex-file_io.cpp  ex-getmac.cpp  ex-pcicclient_async_messages.cpp  ex-pcicclient_set_io.cpp  ex-simple_image.cpp  ex-timestamp.cpp
modules/framegrabber/: CMakeLists.txt
modules/framegrabber/src/: CMakeLists.txt  buffer.cpp  default_organizer.hpp  distance_image_info.cpp  frame.cpp  frame_grabber.cpp  frame_grabber_impl.hpp  frame_impl.hpp  o3d_organizer.cpp  o3r_organizer.cpp  o3r_organizer.hpp  o3r_organizer3D.cpp  o3r_organizer3D.hpp  o3x_organizer.cpp  o3x_organizer.hpp  organizer_utils.cpp  schema.cpp
modules/framegrabber/test/: CMakeLists.txt  O3RBuffer.data  ifm3d-buffer-tests.cpp  ifm3d-dist_image_info-test.cpp  ifm3d-dist_image_info_test_data.h  ifm3d-fg-buffer-tests.cpp  ifm3d-fg-schema-test.cpp  ifm3d-fg-schema-tests.cpp  ifm3d-fg-testrunner.cpp  ifm3d-fg-tests.cpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/framegrabberudp/: CMakeLists.txt
modules/framegrabberudp/src/: CMakeLists.txt
modules/framegrabberudp/test/: CMakeLists.txt  ifm3d-fg_udp-testrunner.cpp  ifm3d-fg_udp-tests.cpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/image/: CMakeLists.txt
modules/image/src/: CMakeLists.txt
modules/image/test/: CMakeLists.txt  ifm3d-image-tests.cpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/libifm3d/: CMakeLists.txt
modules/opencv/: CMakeLists.txt
modules/opencv/test/: CMakeLists.txt  ifm3d-opencv-tests.cpp  ifm3d-opencv-tests2.cpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/pcicclient/: CMakeLists.txt
modules/pcicclient/src/: CMakeLists.txt  pcicclient_impl.hpp
modules/pcicclient/test/: CMakeLists.txt  ifm3d-pcicclient-testrunner.cpp  ifm3d-pcicclient-tests.cpp  test_wrapper.bat.in  test_wrapper.sh.in
modules/pybind11/: CMakeLists.txt
modules/pybind11/src/: CMakeLists.txt  METADATA.in  main.cpp  util.hpp
modules/pybind11/test/: CMakeLists.txt  test_ifm3d_camera.py  test_ifm3d_deserialize.py  (+8 more)
modules/simple_image/: CMakeLists.txt
modules/stlimage/: CMakeLists.txt
modules/swupdater/: CMakeLists.txt
modules/tools/: CMakeLists.txt  ifm3d.cpp
(+714 files in other folders)
